--- a/styles/servicios.css
+++ b/styles/servicios.css
@@ -54,5 +54,61 @@ h1 {
     text-shadow: 1px 1px 2px black;
     font-size: 40px;
     text-align: center;
-    margin-top: 40px;
+    margin-top: 20px;
 }
+
+section{
+    
+    object-position: center;
+    text-align: justify;
+    padding: 1rem;
+    background: transparent;
+    box-shadow: 0 3px 10px 0 rgba(#000, 0.1);
+    border-radius: 5px;
+}
+
+h2 {
+    
+    width: 400px;
+    color: white;
+    text-align: center;
+    background-color: darkblue;
+    margin-bottom: 0.5rem;
+    font-style: italic;
+    font-weight: bold;
+    
+    
+}
+  
+scroll-container {
+    display: block;
+    overflow-x: scroll;
+    scroll-behavior: smooth;
+    scroll-snap-type: inline-flex;
+    scroll-snap-align: start;
+    scroll-padding: 1rem; 
+}   
+
+.box {
+    
+    margin-left: -0.7rem;
+    
+    transform: skew(2.5deg);
+    opacity: 0.7;
+    flex: 0 0 150px;
+    width: 150px;
+    height: 150px;
+    
+    }
+
+.box:hover {
+    
+    opacity: 1;
+    transform: skew(7.5deg);
+    transition: all 1.1s ease-in-out;
+    width: 200px;
+    height: 200px;
+
+    
+}  
+
