--- a/styles/servicios.css
+++ b/styles/servicios.css
@@ -46,6 +46,7 @@ li a:hover:not(.active){
     background-size: cover;
     background-attachment: fixed;
     color: white;
+    
 
 }
 
@@ -62,18 +63,21 @@ section{
     object-position: center;
     text-align: justify;
     padding: 1rem;
-    background: transparent;
+    background: lightblue;
+    opacity: 0.8;
     box-shadow: 0 3px 10px 0 rgba(#000, 0.1);
     border-radius: 5px;
 }
 
 h2 {
     
+    
     width: 400px;
     color: white;
     text-align: center;
     background-color: darkblue;
-    margin-bottom: 0.5rem;
+    margin-left: 2rem;
+    margin-bottom: 5.2rem;
     font-style: italic;
     font-weight: bold;
     
@@ -81,6 +85,7 @@ h2 {
 }
   
 scroll-container {
+    padding-left: 5rem;
     display: block;
     overflow-x: scroll;
     scroll-behavior: smooth;
@@ -91,24 +96,28 @@ scroll-container {
 
 .box {
     
-    margin-left: -0.7rem;
-    
-    transform: skew(2.5deg);
+    margin: 0 0 2rem 0;
+    transform: skew(-15.5deg);
+    transition: all 7.5s ease-in-out;
     opacity: 0.7;
     flex: 0 0 150px;
     width: 150px;
     height: 150px;
     
-    }
+}
 
 .box:hover {
     
     opacity: 1;
-    transform: skew(7.5deg);
-    transition: all 1.1s ease-in-out;
-    width: 200px;
-    height: 200px;
-
+    transform: skew(0.5deg);
+    transition: all 2s ease-in-out;
+    width: 225px;
+    height: 225px;
+ 
     
 }  
+div {
+    color: black;
+    text-align: justify;
+}
 
