add config scroll and tag <p>, etc

--- a/styles/servicios.css
+++ b/styles/servicios.css
@@ -98,7 +98,7 @@ scroll-container {
     
     margin: 0 0 2rem 0;
     transform: skew(-15.5deg);
-    transition: all 7.5s ease-in-out;
+    transition: all 5s ease-in-out;
     opacity: 0.7;
     flex: 0 0 150px;
     width: 150px;
@@ -119,5 +119,10 @@ scroll-container {
 div {
     color: black;
     text-align: justify;
+}
+p {
+    color: white;
+    text-align: justify;
+    text-shadow: 1px 1px 2px darkblue;
 }
 
