--- a/styles/institucional.css
+++ b/styles/institucional.css
@@ -7,12 +7,15 @@ ul {
     /* Probar funcionalidad y estetica
     background: rgb(0,99,11);
     background: radial-gradient(circle, rgba(0,99,11,1) 20%, rgba(0,12,132,1) 86%); */
-    background-image: url(/assets/img/fondo-tl-002.jpg);
+    /* background-image: url(/assets/img/fondo-tl-002.jpg); */
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
     list-style-type: none;
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: darkgreen;
+    /* background-color: darkgreen; */
     
 }
 
@@ -36,23 +39,32 @@ li a:hover:not(.active){
     opacity: 0.7;
 }
 
-.active{
-    background-color: darkblue;
-}
 
-/* Imagen fondo */
-.fondo{
-    background-image: url(/assets/img/fondo-tl-002.jpg);
+/* Contenido */
+.content{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    justify-content: space-between;
+    background-image: url(/assets/img/fibra.jpg);
     background-size: cover;
     background-attachment: fixed;
     color: white;
+    }
 
-}
-
+/* Estilos para el contenido principal */
 h1 {
     color: white;
     text-shadow: 1px 1px 2px black;
     font-size: 40px;
     text-align: center;
     margin-top: 40px;
+}
+footer{
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    padding: 10px 0;
+    text-align: center;
 }
