--- a/styles/servicios.css
+++ b/styles/servicios.css
@@ -1,3 +1,4 @@
+/* Estilos para el menú de navegación */
 *{
     font-family: 'Ubuntu', sans-serif;
  }
@@ -7,12 +8,15 @@ ul {
     /* Probar funcionalidad y estetica
     background: rgb(0,99,11);
     background: radial-gradient(circle, rgba(0,99,11,1) 20%, rgba(0,12,132,1) 86%); */
-    background-image: url(/assets/img/fondo-tl-002.jpg);
+    /* background-image: url(/assets/img/fondo-tl-002.jpg); */
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
     list-style-type: none;
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: darkgreen;
+    /* background-color: darkgreen; */
     
 }
 
@@ -36,19 +40,21 @@ li a:hover:not(.active){
     opacity: 0.7;
 }
 
-.active{
+/* .active{
     background-color: darkblue;
-}
+} */
 
-/* Imagen fondo */
-.fondo{
-    background-image: url(/assets/img/fondo-tl-002.jpg);
+/* Contenido */
+.content{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    justify-content: space-between;
+    background-image: url(/assets/img/fibra.jpg);
     background-size: cover;
     background-attachment: fixed;
     color: white;
-    
-
-}
+    }
 
 h1 {
     color: white;
@@ -63,8 +69,8 @@ section{
     object-position: center;
     text-align: justify;
     padding: 1rem;
-    background: lightblue;
-    opacity: 0.8;
+    background: white;
+    opacity: 0.7;
     box-shadow: 0 3px 10px 0 rgba(#000, 0.1);
     border-radius: 5px;
 }
@@ -75,7 +81,7 @@ h2 {
     width: 400px;
     color: white;
     text-align: center;
-    background-color: darkblue;
+    background-color: black;
     margin-left: 2rem;
     margin-bottom: 5.2rem;
     font-style: italic;
@@ -123,6 +129,15 @@ div {
 p {
     color: white;
     text-align: justify;
-    text-shadow: 1px 1px 2px darkblue;
+    text-shadow: 1px 1px 2px black;
+}
+
+footer{
+    position: relative;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    padding: 10px 0;
+    text-align: center;
 }
 
