--- a/styles/style.css
+++ b/styles/style.css
@@ -6,25 +6,26 @@ ul{
     /* Probar funcionalidad y estetica
     background: rgb(0,99,11);
     background: radial-gradient(circle, rgba(0,99,11,1) 20%, rgba(0,12,132,1) 86%); */
-    background-image: url(/assets/img/fondo-tl-002.jpg);
+    /* background-image: url(/assets/img/fondo-tl-002.jpg); */
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
     list-style-type: none;
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: darkgreen;
-        
-}
+    /* background-color: darkgreen; */
+    }
 
 li{
     float: left;
     border-right: 1px solid transparent;
-    
-}
+    }
 
 /* li:last-child{
     border-right: none;
     border-left: 1px solid transparent;
-} */
+    } */
 
 li a{
     display: block;
@@ -32,18 +33,16 @@ li a{
     text-align: center;
     padding: 10px 15px;
     text-decoration: none;
-    
-}
+    }   
 
-.active{
+/* .active{
     background-color: darkblue;
-    
-}
+    } */
 
 li a:hover:not(.active){
     background-color: transparent;
     opacity: 0.7;
-}
+    }
 
 h1 {
     color: white;
@@ -51,42 +50,34 @@ h1 {
     font-size: 40px;
     text-align: center;
     margin-top: 40px;
-}
+    }   
 
 p{
     color: white;
-}
+    }
 
-.fondo{
-    background-image: url(/assets/img/fondo-tl-002.jpg);
+/* contenido */
+.content{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    justify-content: space-between;
+    background-image: url(/assets/img/fibra.jpg);
     background-size: cover;
     background-attachment: fixed;
     color: white;
-    
-
-}
-
-.container{
-    max-width: 800px;
-    margin: 0 auto;
-    padding: 0 1rem;
-    
-}
+    }
 
 
-.parrafos{
-    
-    padding-top: 2rem;
-    padding-bottom: 2rem;
-    font-family: Arial, Helvetica, sans-serif;
-}
 
-/* footer {
-    background-color: transparent;
-    color: white;
-    text-align: center;
-    padding: 20px;
-    position: absolute;
+footer{
+    position: fixed;
     bottom: 0;
+    left: 0;
     width: 100%;
-} */
+    padding: 10px 0;
+    text-align: center;
+    }
+
+
+    
