Modificaciones menores varias, cambio nitidez imagenes de Servicos y arreglos

--- a/styles/servicios.css
+++ b/styles/servicios.css
@@ -5,10 +5,7 @@
 
 /* Estilos para el menú de navegación */
 ul {
-    /* Probar funcionalidad y estetica
-    background: rgb(0,99,11);
-    background: radial-gradient(circle, rgba(0,99,11,1) 20%, rgba(0,12,132,1) 86%); */
-    /* background-image: url(/assets/img/fondo-tl-002.jpg); */
+  
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -40,10 +37,6 @@ li a:hover:not(.active){
     opacity: 0.7;
 }
 
-/* .active{
-    background-color: darkblue;
-} */
-
 /* Contenido */
 .content{
     display: flex;
@@ -57,6 +50,7 @@ li a:hover:not(.active){
     }
 
 h1 {
+    display: flex;
     color: white;
     text-shadow: 1px 1px 2px black;
     font-size: 40px;
@@ -64,26 +58,33 @@ h1 {
     margin-top: 20px;
 }
 
-section{
+p {
+    color: white;
+    text-align: justify;
+    text-shadow: 1px 1px 2px black;
+}
+
+section {
     
     object-position: center;
     text-align: justify;
     padding: 1rem;
-    background: white;
-    opacity: 0.7;
+    margin: 1rem;
+    margin-right: 2rem;
+    background: gray;
+    opacity: 0.9;
     box-shadow: 0 3px 10px 0 rgba(#000, 0.1);
     border-radius: 5px;
 }
 
 h2 {
     
-    
-    width: 400px;
+    display: flex;
     color: white;
     text-align: center;
     background-color: black;
-    margin-left: 2rem;
-    margin-bottom: 5.2rem;
+    margin-left: 1rem;
+    margin-bottom: 1rem;
     font-style: italic;
     font-weight: bold;
     
@@ -91,46 +92,44 @@ h2 {
 }
   
 scroll-container {
-    padding-left: 5rem;
-    display: block;
+    
+    padding-left: 2rem;
+    display: flex;
     overflow-x: scroll;
-    scroll-behavior: smooth;
-    scroll-snap-type: inline-flex;
-    scroll-snap-align: start;
-    scroll-padding: 1rem; 
-}   
+    scroll-padding: 5rem; 
+}
 
-.box {
+
+
+scroll-container img:not(:hover) {
     
     margin: 0 0 2rem 0;
-    transform: skew(-15.5deg);
-    transition: all 5s ease-in-out;
-    opacity: 0.7;
     flex: 0 0 150px;
     width: 150px;
     height: 150px;
+    filter: grayscale();
+    transform: skew(-15.5deg);
+    transition: all 5s ease-in-out;
+    
     
 }
 
-.box:hover {
+
+scroll-container img:hover {
     
+    flex: 0 0 150px;
+    width: 225px;
+    height: 225px;
     opacity: 1;
     transform: skew(0.5deg);
     transition: all 2s ease-in-out;
+    flex: 0 0 150px;
     width: 225px;
     height: 225px;
  
     
 }  
-div {
-    color: black;
-    text-align: justify;
-}
-p {
-    color: white;
-    text-align: justify;
-    text-shadow: 1px 1px 2px black;
-}
+
 
 footer{
     position: relative;
