--- a/styles/style.css
+++ b/styles/style.css
@@ -69,13 +69,46 @@ p{
 
 }
 
-.container{
-    max-width: 800px;
-    margin: 0 auto;
-    padding: 0 1rem;
+.contenedor{
+    max-width: 1200px;
+    margin: auto;
+    padding: 40px 0;
+
+    /* Estilos con Grid */
+    display: grid;
+    grid-template-columns: 3fr;
+    gap: 20px;
     
 }
 
+.cont-images {
+    /* Grid */
+    display: grid;
+    grid-template-columns: 3fr 3fr;
+    gap: 20px;
+    
+
+}
+.card {
+    border-radius: 10px;
+    min-height: 200px;
+    font-weight: bold;
+    padding: 20px;
+    position: relative;
+    overflow: hidden;
+    background-size: cover;
+    background-position: center center;
+    
+}
+
+.card .textos {
+    height: 100%;
+
+    /* Flexbox */
+    display:  flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
 
 .parrafos{
     
