--- a/styles/autogestion.css
+++ b/styles/autogestion.css
@@ -1,4 +1,3 @@
-*/* Estilos para el menú de navegación */
 *{
     font-family: 'Ubuntu', sans-serif;
     margin: 0;
@@ -115,7 +114,7 @@ p {
     border-radius: 5px;
     color: white ;
     word-wrap: break-word;
-    }
+}
 
 .casilla{
     display: flex;
@@ -123,12 +122,11 @@ p {
     margin-top: 5px;
     justify-content: space-between;
     background-color: gray;
-    }
+}
 
-#text {
+textarea {
     display: inline-flex;
     resize: none;
-    
 }
 
 footer{
