--- a/styles/institucional.css
+++ b/styles/institucional.css
@@ -59,6 +59,8 @@ h1 {
     text-align: justify;
     font-size: 16px;
     line-height: 1.6;
+    padding: 20px;
+    justify-content: center;
 }
   
 footer{
