Nuevo style al formulario

--- a/styles/institucional.css
+++ b/styles/institucional.css
@@ -39,7 +39,7 @@ li a:hover:not(.active){
     flex-direction: column;
     text-align: center;
     justify-content: space-between;
-    background-image: url(/assets/img/fibra.jpg);
+    background-image: url(/assets/img/fondo.jpg);
     background-size: cover;
     background-attachment: fixed;
     color: white;
