--- a/styles/autogestion.css
+++ b/styles/autogestion.css
@@ -46,38 +46,11 @@ li a:hover:not(.active){
     flex-direction: column;
     text-align: center;
     justify-content: space-between;
-    background-image: url(/assets/img/fibra.jpg);
+    background-image: url(/assets/img/fondo.jpg);
     background-size: cover;
     background-attachment: fixed;
     color: white;
     }
-
-/* Estilo formulario */
-form {
-    display: flex;
-    margin: 20px;
-}
-
-/* Estilo botón */
-button {
-    background-color: gray;
-    border: none;
-    color: white;
-    margin: 3px;
-    padding: 5px;
-    text-align: bottom;
-    display: inline-block;
-    font-size: 16px;
-    resize: none;
-    
-}
-
-.button:hover {
-    background-color: white;
-    filter:invert();
-    font-size: 20px;
-    color: white;
-}
 
 /* Estilos para el contenido principal */
 h1 {
@@ -88,11 +61,26 @@ h1 {
     margin-top: 40px;
 }
 
+section form {
+    display: flex;
+    margin: auto;
+    width: 50%;
+    border: 3px solid yellow;
+    padding: 10px;
+}
+
+section img {
+    display: flex;
+    margin: auto;
+    width: 30%;
+    padding: 10px;
+}
+
 p {
-    font-size: 20px;
+    font-size: 18px;
     line-height: 1.5;
     margin: 20px;
-    text-align: justify;
+    text-align: center;
     background-color: transparent;
     color: white;
     opacity: 0.6;
@@ -100,33 +88,67 @@ p {
     word-wrap: break-word;
 }
 
-.formulario{
-    display:flex;
-    flex-direction: column;
+/* Estilo formulario */
+.formulario {
+    
+    display: flexbox;
     text-align: center;
-    gap: 2px;
-    justify-content: space-between;
-    align-items: flex-start;
-    padding: 5px;
-    margin: 10px;
-    background-color: transparent;
-    opacity: 0.6;
-    border-radius: 5px;
-    color: white ;
-    word-wrap: break-word;
+    /* background: gray; */
+    color: white;
+    flex-direction: column;
+    padding: 1vw 2vw;
+    width: 100%;
+    max-width: 600px;
+    border-radius: 10px;
+}
+
+form input, form textarea {
+    border: 0;
+    margin: 10px 0;
+    padding: 10px;
+    outline: none;
+    background: white;
+    font-size: 16px;
+    
+}
+
+form button {
+    padding: 15px;
+    background: rgb(255, 238, 2);
+    color: black;
+    font-size: 20px;
+    border: 0;
+    outline: none;
+    cursor: pointer;
+    width: 150px;
+    margin:  20px auto 0;
+    border-radius: 30px;
+}
+
+form button:hover {
+        font-weight: bold;
+        filter: opacity(0.7);
 }
 
 .casilla{
     display: flex;
-    flex-direction: row;
-    margin-top: 5px;
-    justify-content: space-between;
-    background-color: gray;
+    margin: auto;
+    width: 100%;
+    padding: 10px;
+        
 }
 
-textarea {
+form div li label textarea, input[type=email], form div li label input[type=text]{
     display: inline-flex;
+    color: white;
+    background-color: rgba(170, 166, 166, 0.3);
+    box-shadow: 0 3px 10px 0 rgba(#000, 0.1);
     resize: none;
+    
+}
+
+textarea:hover, input[type=email]:hover, form div li label input[type=text]:hover{
+    color: yellow;
 }
 
 footer{
