--- a/styles/servicios.css
+++ b/styles/servicios.css
@@ -38,7 +38,7 @@ li a:hover:not(.active){
     flex-direction: column;
     text-align: center;
     justify-content: space-between;
-    background-image: url(/assets/img/fibra.jpg);
+    background-image: url(/assets/img/fondo.jpg);
     background-size: cover;
     background-attachment: fixed;
     color: white;
@@ -53,6 +53,7 @@ h1 {
 }
 
 p {
+    font-size: 18px;
     color: white;
     text-align: justify;
     text-shadow: 1px 1px 2px black;
@@ -64,11 +65,11 @@ section {
     padding: 1rem;
     margin: 1rem;
     margin-left: 3rem;
-    margin-right: 3rem;
-    background: gray;
+    margin-right: 2rem;
+    background: rgba(170, 166, 166, 0.8);
     opacity: 0.9;
     box-shadow: 0 3px 10px 0 rgba(#000, 0.1);
-    border-radius: 5px;
+    border-radius: 25px;
 }
 
 h2 {
@@ -80,6 +81,9 @@ h2 {
     margin-bottom: 1rem;
     font-style: italic;
     font-weight: bold;
+    border-radius: 30px;
+    padding: 5px;
+    text-shadow: 1px 2px 2px yellow;
 }
   
 scroll-container {
