--- a/styles/style.css
+++ b/styles/style.css
@@ -44,7 +44,7 @@ p{
 }
 
 .content{
-    background-image: url(/assets/img/fibra.jpg);
+    background-image: url(/assets/img/fondo.jpg);
     background-size: cover;
     background-attachment: fixed;
     color: white;
