--- a/styles/servicios.css
+++ b/styles/servicios.css
@@ -32,6 +32,23 @@ li a:hover:not(.active){
     opacity: 0.7;
 }
 
+/*logo*/
+.logo-container{
+    padding: 0;
+    margin: 0;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.logo-container img {
+    width: 200px; /* Tamaño de la imagen del logo */
+    height: auto;
+    margin-right: 10px; /* Espacio entre el logo y el título */
+    align-items: center;
+}
+
 /* Contenido */
 .content{
     display: flex;
