--- a/styles/style.css
+++ b/styles/style.css
@@ -31,6 +31,23 @@ li a:hover:not(.active){
     opacity: 0.7;
 }
 
+/*logo*/
+.logo-container{
+    padding: 0;
+    margin: 0;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.logo-container img {
+    width: 200px; /* Tamaño de la imagen del logo */
+    height: auto;
+    margin-right: 10px; /* Espacio entre el logo y el título */
+    align-items: center;
+}
+
 h1 {
     color: white;
     text-shadow: 1px 1px 2px black;
@@ -99,6 +116,41 @@ p{
     justify-content: space-between;
 }
 
+.datmap {
+    display: flex;
+    margin: auto;
+    width: 100%;
+    max-width: 800px;
+    padding: 10px;
+    
+}
+.mapa {
+    display: flex;
+    margin: auto;
+    width: 100%;
+    border: 10px;
+    border-color: yellow;
+    max-width: 400px;
+    padding: 5px;
+    flex-direction: column;
+    opacity: 0.8;
+
+.datos {
+    
+    display: flex;
+    flex-wrap: wrap;
+    margin: 5px;
+    font-size: 9px;
+    width: 100%;
+    max-width: 300px;
+    padding: 2px;
+    flex-direction: row;
+    white-space: pre-wrap;
+    
+    
+}
+
+}
 footer{
     position: grid;
     bottom: 0;
